# job-radar2

./: .gitignore  AGENTS.md  CONTEXT.md  Justfile  README.md  THIRD_PARTY_NOTICES.md  components.json  index.html  package-lock.json  package.json  progress.md  skills-lock.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/geo/: readme.md
src-tauri/migrations/: 20260608234300_sqlite_foundation.sql  20260609000000_current_schema.sql  20260610000000_system_profiles.sql  20260613000000_search_requests.sql
src-tauri/resources/: geo_seed.sqlite
src-tauri/resources/profiles/: ashby.json  greenhouse.json  lever.json  magnolia_esmp_job_search.json  muz_global_jobboard.json  personio.json  phenom.json  stepstone_de.json  successfactors.json  workday.json
src-tauri/src/: adapter_registry.rs  app_state.rs  commands.rs  db.rs  declarative_browser_inventory_executor.rs  declarative_inventory_executor.rs  declarative_template.rs  lib.rs  main.rs  paths.rs  search_request_model.rs  search_run_model.rs  search_run_smoke.rs  simple_json_path.rs  sitemap_source_executor.rs  source_detection.rs  source_model.rs  source_registry.rs  stepstone_source_executor.rs
src-tauri/src/agent/: auth.rs  chat.rs  chat_application.rs  compaction.rs  configuration.rs  conversation.rs  error.rs  mod.rs  models.rs  openai_codex.rs  registry.rs  testing.rs
src-tauri/src/app/: commands.rs  mod.rs  paths.rs  resources.rs  state.rs
src-tauri/src/background_tasks/: mod.rs
src-tauri/src/browser_runtime/: archive.rs  browser_control.rs  control.rs  download.rs  install.rs  managed.rs  manifest.rs  mod.rs  owned.rs  spec.rs  status.rs  tests.rs  types.rs
src-tauri/src/checks/: fingerprints.rs  freshness.rs  mod.rs  persistence.rs  report.rs  source_behavior_fingerprints.rs
src-tauri/src/db/: mod.rs  seed.rs
src-tauri/src/declarative/: mod.rs  posting_detail.rs
src-tauri/src/geo/: db.rs  distance.rs  matching.rs  mod.rs  normalization.rs  resolver.rs
src-tauri/src/profile_dsl/: mod.rs  occurrence.rs  policy.rs  source_config.rs  template.rs
src-tauri/src/schema/: check-report.schema.json  fixture-manifest.schema.json  source-profile.schema.json  source.schema.json
src-tauri/src/search/: candidate_resolution.rs  comparison.rs  mod.rs  normalization.rs
src-tauri/src/search_request_model/: rules.rs  types.rs  validation.rs
src-tauri/src/search_run/: mod.rs  normalization.rs
src-tauri/src/search_run_model/: execution.rs  mod.rs  tests.rs  types.rs
src-tauri/src/search_run_smoke/: cli.rs  constants.rs  mod.rs  request.rs  runner.rs  schott_source.rs  tests.rs
src-tauri/src/source/: documents.rs  mod.rs  validation.rs
src-tauri/src/source_detection/: tests.rs  types.rs
src-tauri/src/source_profile/: documents.rs  mod.rs
src-tauri/tests/: acceptance_primitives.rs  agent.rs  agent_chats.rs  agent_configuration_api.rs  agent_conversation.rs  agent_sessions.rs  browser_acquisition_contract.rs  browser_managed_adapter.rs  browser_primitives.rs  browser_scripted_adapter.rs  candidate_resolution.rs  capture_primitives.rs  cardinality_primitives.rs  check_reports.rs  compiler_resolution.rs  compiler_security_boundedness.rs  compiler_semantic_validation.rs  detail_browser_adapter.rs  detail_runtime.rs  detection_browser_strategy.rs  detection_reconciliation.rs  detection_url_http_strategies.rs  discovery_browser_adapter.rs  discovery_runtime.rs  effective_profile_compiler.rs  effective_profile_provenance.rs  fixture_manifests.rs  fixture_pack_paths.rs  geo_resolution.rs  greenhouse_profile_dsl.rs  http_fetch_primitives.rs  pagination_primitives.rs  parse_primitives.rs  phase_module_naming.rs  posting_detail_runtime.rs  posting_discovery_runtime.rs  posting_occurrence.rs  predicate_primitives.rs  profile_dsl_compiler.rs  profile_dsl_primitives.rs  (+20 more)
(+1028 files in other folders)
