[package]
name = "job-radar"
default-run = "job-radar"
version = "0.1.0"
description = "Job Radar desktop app"
authors = ["Tim Jonas Wechler"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "job_radar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agent-debug"
path = "src/bin/agent_debug.rs"
required-features = ["agent-debug"]

[features]
agent-debug = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
base64 = "0.22"
bigdecimal = "0.4"
chromiumoxide = "0.9.1"
dom_query = "0.27"
encoding_rs = "0.8"
futures-util = "0.3"
fs2 = "0.4"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
regex = "1"
roxmltree = "0.20"
unicode-normalization = "0.1"
unicode-segmentation = "1"
url = "2"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "rt", "sync", "test-util", "time"] }
uuid = { version = "1", features = ["v4", "v7"] }
time = { version = "=0.3.41", features = ["formatting", "parsing"] }
trash = "=5.2.2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_Memory",
  "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
jsonschema = { version = "0.46.8", default-features = false }
proptest = "1.6"

# Keep incremental compilation for fast local rebuilds while limiting the
# amount of debug information generated for large third-party dependencies.
[profile.dev]
debug = 1
incremental = true

[profile.dev.package."*"]
debug = false

[profile.test]
debug = 1
incremental = true

[profile.test.package."*"]
debug = false
